Modif base.html

--- a/Craba/templates/accueil.html
+++ b/Craba/templates/accueil.html
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fedacraba - Page d'Accueil</title>
-</head>
-<body>
-    <header>
-        <h1>Fedacraba</h1>
-        <p>chèvre.</p>
-    </header>
-
-    <section>
-        <h2>Bienvenue sur notre site Fedacraba</h2>
-        <p>
-            blabla
-        </p>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Fedacraba. Tous droits réservés.</p>
-    </footer>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Page accueil{% endblock %}
+{% block content %}
+    <h1> TEST  </h1>
+{% endblock %}
